# SolarMonitoringPlasmoid

./: .gitignore  CMakeLists.txt  Messages.sh  SolarMonitoringPlasmoid.kdev4
.kdev4/: SolarMonitoringPlasmoid.kdev4
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml
src/: CMakeLists.txt  solarmonitoringplasmoid.cpp  solarmonitoringplasmoid.h  solarmonitoringplasmoiddd.cpp  solarmonitoringplasmoiddd.h  testMessage.py
src/package/: metadata.desktop
src/package/contents/config/: config.qml  main.xml
src/package/contents/ui/: ConfigGeneral.qml  MainWidgetColumn.qml  MainWidgetGrid.qml  main.qml
